# fomosto-psgrn-pscmp

./: .gitignore  CLAUDE.md  configure.ac  configure~
src/pscmp/: Makefile.am  pscglob.h
src/psgrn/: Makefile.am  psgglob.h
